Layout - Fixed navbar and footer on mobile

--- a/frontend/src/components/layout/footer.css
+++ b/frontend/src/components/layout/footer.css
@@ -14,3 +14,9 @@
 }.item {
   color: #58a6ff !important;
 }
+
+@media screen and (max-width: 767px) {
+  .ui.menu.gh-footer {
+    display: none !important;
+  }
+}
